add_executable(1 1.cpp)
add_executable(1_2 1_2.cpp)
add_executable(1_3 1_3.cpp)
add_executable(1_4 1_4.cpp)
add_executable(1_5 1_5.cpp)
add_executable(1_6 1_6.cpp)
add_executable(template_template template_template.cpp)
add_executable(ptr_template ptr_template.cpp)
add_executable(weak_ptr weak_ptr.cpp)
add_executable(make_template_shared make_template_shared.cpp)