add_executable(2_1 2_1.cpp)

add_executable(2_3 2_3.cpp)
add_executable(2_4 2_4.cpp)
add_executable(2_5 2_5.cpp)
add_executable(2_6 2_6.cpp)
add_executable(2_7 2_7.cpp)
add_executable(2_8 2_8.cpp)
add_executable(pack1 pack1.cpp)
add_executable(generator_test generator_test.cpp)
add_executable(generator_test2 generator_test2.cpp)
add_executable(generator_test3 generator_test3.cpp)
add_executable(template_test template_test.h template_test.cpp)
